Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,12 @@
 # Starter pipeline
+- task: Security static source code analysis@88
+  inputs:
+    CheckmarxService: 'Checkmarx'
+    projectName: '32236'
+    preset: 'Checkmarx Default'
+    fullTeamName: 'CxServer'
+    incScan: true
+    vulnerabilityThreshold: false
 # Start with a minimal pipeline that you can customize to build and deploy your code.
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
