--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,13 @@
 # Start with a minimal pipeline that you can customize to build and deploy your code.
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
-
+- task: Security static source code analysis@88
+  inputs:
+    CheckmarxService: 'ABD'
+    projectName: 'BookStoreJava.zip'
+    preset: 'Checkmarx Default'
+    fullTeamName: 'CxServer\SP\Company'
+    incScan: false
 trigger:
 - master
 
