--- a/azure-pipelines-3.yml
+++ b/azure-pipelines-3.yml
@@ -20,3 +20,9 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
+- task: Application security testing@2020
+  inputs:
+    projectName: 'testtesttest'
+    enableSastScan: true
+    CheckmarxService: 'CxSAST 9.0'
+    enableDependencyScan: false
