--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -17,3 +17,10 @@ steps:
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
+- task: Application security testing@2020
+  inputs:
+    enableSastScan: true
+    CheckmarxService: 'CxSAST 9.0'
+    fullTeamName: 'CxServer'
+    incScan: false
+    enableDependencyScan: false
